--- a/styles/components.css
+++ b/styles/components.css
@@ -53,7 +53,7 @@
 
 :where(.litm--checkbox-with-bg),
 .app.litm.litm :where(.litm--checkbox-with-bg) {
-	background: url('../assets/media/checkbox.svg') no-repeat;
+	background: url("../assets/media/checkbox.svg") no-repeat;
 	height: 1.1em;
 	width: 1.1em;
 	background-size: contain;
@@ -64,7 +64,7 @@
 
 	&.checked,
 	&:checked {
-		background-image: url('../assets/media/checkbox-c.svg');
+		background-image: url("../assets/media/checkbox-c.svg");
 	}
 
 	&::after {
@@ -81,25 +81,25 @@
 	-webkit-appearance: none;
 	flex: none;
 	appearance: none;
-	background-color: inherit;
 	margin: 0;
 	font: inherit;
 	color: currentColor;
-	aspect-ratio: 5/6;
+	aspect-ratio: 5 / 6;
 	height: 1.5em;
 	width: unset;
-	background: url('../assets/media/burn.svg') no-repeat;
+	background: url("../assets/media/burn.svg") no-repeat;
+	background-color: inherit;
 	background-size: contain;
 	background-position: center;
 
 	&.transparent {
-		background-image: url('../assets/media/burn-t.svg');
+		background-image: url("../assets/media/burn-t.svg");
 		filter: none;
 	}
 
 	&:checked,
 	&.checked {
-		background-image: url('../assets/media/burn-c.svg');
+		background-image: url("../assets/media/burn-c.svg");
 	}
 
 	&:is([type="checkbox"]) {
@@ -209,7 +209,7 @@
 	filter: hue-rotate(45deg);
 
 	/* For some reason filters bug out inputs */
-	& +* input {
+	& + * input {
 		filter: hue-rotate(0deg);
 	}
 }
@@ -252,7 +252,8 @@ litm-toggled-input {
 	border-radius: 0px;
 
 	& .window-header {
-		background: url("../assets/media/origin-theme-alt-bg-top.webp") no-repeat bottom / cover;
+		background: url("../assets/media/origin-theme-alt-bg-top.webp") no-repeat
+			bottom / cover;
 		color: var(--litm-color-accent);
 		flex: 0 0 32px;
 
